--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
